# swe-speedrun

./: .gitignore  .pr-update-marker  README.md  pyproject.toml  swe_speedrun.ipynb
.github/: copilot-instructions.md
artifacts/checkpoints/qwen-speedrun/: adapter_config.json
artifacts/checkpoints/qwen-speedrun/checkpoint-4/: adapter_config.json  rng_state.pth  trainer_state.json
artifacts/checkpoints/qwen-speedrun/runs/Nov12_21-01-39_a20bce733d15/: events.out.tfevents.1762981300.a20bce733d15.8093.0
configs/: scaffold_readonly.yaml  speedrun.json
scripts/: build_speedrun_dataset.py  summarize_dataset.py
scripts/data/processed/: swe-speedrun.jsonl
swe_scaffold/: __init__.py  config.py  dataset.py  evaluation.py  labels.py  training.py
swe_speedrun_scaffold.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_build_integration.py  test_dataset_filtering.py  test_dataset_splits.py  test_include_empty.py  test_labeling_heuristic.py  test_patch_length_filter.py  test_preference_integration.py  test_skipped_report_accounting.py  test_train_only.py  test_training_config.py
training/: evaluate_qwen_speedrun.py  train_qwen_speedrun.py
